<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
        android:id="@+id/textViewMain"
        android:layout_width="match_parent"
        android:layout_height= "0dp"
        android:text="@string/report"
        android:layout_weight="1"
        android:gravity="center"
         />
	
	<TextView
        android:id="@+id/userDescript"
        android:layout_width="match_parent"
        android:layout_height= "0dp"
        android:text="@string/report"
        android:layout_weight="1"
        android:gravity="center"
         />
	
	<Button
        android:id="@+id/autoButton"
        android:layout_width="match_parent"
        android:text="@string/autoButtonText"
        />
	
	<Button
        android:id="@+id/manualButton"
        android:layout_width="match_parent"
        android:text="@string/manualButtonText"
        />
	
	
	
	
</LinearLayout>
