<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = "@color/darkGreyForBackgrounds" 
    >
    
    <LinearLayout
        android:id = "@+id/report_layout_minor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp" 
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="10dp" >
            
            <TextView
		        android:id="@+id/textViewMain"
		        android:layout_width="wrap_content"
		        android:layout_height= "wrap_content"
		        android:text="@string/report"
		        android:gravity="left"
		        android:textColor="@color/OpenBoxGreen" />
            
            <TextView
		        android:id="@+id/userDescript"
		        android:layout_width="wrap_content"
		        android:layout_height= "wrap_content"
		        android:text="@string/Test"
		        android:gravity="left"
		        android:textColor="@color/whiteBackground" />
            
        </LinearLayout>

		<ImageButton
	        android:id="@+id/home_button_report"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:background="@drawable/home"
	        android:contentDescription="@string/home" 
	        android:layout_gravity="right" />
        
    </LinearLayout>
	
	<LinearLayout 
	    android:id = "@+id/llforbuttonsinreport"
	    android:layout_width="fill_parent"
        android:layout_height= "wrap_content"
		android:orientation="horizontal"
	    android:background = "@color/darkGreyForBackgrounds"	    
	    >	    
	    	    
	    <Button
        android:id="@+id/autoButton"
        android:layout_width="0dp"
        android:layout_height= "wrap_content"
        android:text="@string/autoButtonText"      
        style="?android:attr/borderlessButtonStyle" 
        android:layout_weight="1"    
        android:layout_marginLeft="2dp"
        android:fontFamily="courier new"
        android:layout_marginRight="2dp"  
        android:background="@color/lightGreenForLabels"
        />
	
		<Button
	        android:id="@+id/manualButton"
	        android:layout_width="0dp"
	        android:layout_height= "wrap_content"
	        android:text="@string/manualButtonText"
	        style="?android:attr/borderlessButtonStyle"
	        android:layout_weight="1"    
	        android:layout_marginRight="2dp"
	        android:fontFamily="courier new"
	        android:background="@color/greyForBackrounds"	        
	    />  	    
	    </LinearLayout>
	    
	
	
	
	


	
	
</LinearLayout>
